# FalsiFlyer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  impax_signal_disc.py  q_kernel_tdm.py
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  AUDIT_LEDGER_SPEC.md
examples/: parity_check_7k.py  parity_check_impax.py  walkthrough_7j_to_7k.py  walkthrough_impax.py
falsiflyer/: __init__.py  audit.py  baselines.py  diagnostic.py  errors.py  harness.py  prereg.py  report.py  types.py
tests/: __init__.py  test_audit.py  test_baselines.py  test_diagnostic.py  test_golden_q_kernel_tdm.py  test_harness.py  test_impax_signal_disc.py  test_prereg.py
tests/golden/: _generate_fixtures.py  q_kernel_tdm_7j_baselines.json  q_kernel_tdm_7k_baselines.json  q_kernel_tdm_7k_questimator.json
